# exp-template

./: .env.secret.example  .gitignore  README.md  config.py  main.py  pyproject.toml  start_vllm_server_as_process.py  test.ipynb  test.txt
conf/: config.yaml  defaults.yaml
conf/dataset/: _default.yaml  chatrag_coqa.yaml  chatrag_doc2dial.yaml  chatrag_doqa_cooking.yaml  chatrag_doqa_movies.yaml  chatrag_doqa_travel.yaml  chatrag_hybridial.yaml  chatrag_inscit.yaml  chatrag_qrecc.yaml  chatrag_quac.yaml  chatrag_sqa.yaml  chatrag_topiocqa.yaml  defaults.yaml  finqa.yaml  scivqa.yaml
conf/experiment/: chatrag_all.yaml  chatrag_all_test.yaml  chatrag_test.yaml
conf/mlflow/: finqa.yaml  rag_eval.yaml  scivqa.yaml
conf/model/: _default.yaml  gpt.yaml  llama.yaml  llama_small.yaml  qwen2-7B.yaml  qwen_25.yaml
conf/rag/: _default.yaml  base.yaml  bm25.yaml  hybrid.yaml  hyde.yaml  known_context.yaml  no_context.yaml  reranker.yaml  summarization.yaml  summarization_context.yaml
conf/vector_db/: chroma.yaml
conf/wandb/: defaults.yaml
prompt/: llama3.1_rag.j2
prompt/sys_prompts/: chatgpt.txt  default.txt
src/data/: hf.py
src/metrics/: __init__.py  answer_faithfulness.py  answer_faithfulness_nli.py  answer_faithfulness_split.py  answer_relevance.py  answer_relevance_qgen.py  answer_similarity.py  classic.py  context_precision.py  context_precision_prompt.py  context_recall.py  context_recall_prompt.py  llm.py  non_answer_critic.py  non_answer_critic_prompt.py  utils.py
src/utils/: utils.py
streamlit/: explore.py
sys_prompts/: default.txt
(+7 files in other folders)
